--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongodb": "^5.1.0",
     "mongoose": "^6.0.12",
     "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "validator": "^13.7.0",
     "winston": "^3.3.3"
   },
