--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.17.1",
+    "express-fileupload": "^1.4.0",
     "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^5.1.0",
